<resources>
    <string name="app_name">BookmySport</string>
    <string name="email_hint_text">Enter your account e-mail</string>
    <string name="username_hint">Enter Email</string>
    <string name="password_hint">Enter password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="venue_name">Venue Name</string>
    <string name="booking_button">Book</string>
    <string name="venue_description">Venue description</string>
    <string name="location">"Location: "</string>
    <string name="location_displayed_here">Location displayed here</string>
    <string name="sport_type">Sport:</string>
    <string name="sport">Sport Type</string>
    <string name="services"><![CDATA[Services & Facilities]]></string>
    <string name="holder">holder</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="enter_age">Enter your age</string>
    <string name="create_account">Create Account</string>
    <string name="location_text">Location</string>
    <string name="bethroom">Bathrooms</string>
    <string name="car_park">Car Parks</string>
    <string name="first_aid">First Aid</string>
    <string name="lockers">Lockers</string>
    <string name="food">Resturants</string>
    <string name="wifi">WiFi</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_date">Select date:</string>
    <string name="select_date_time_slot">Date and Time of Booking</string>
    <string name="enter_date">Click to select date</string>
    <string name="select_time">Select time:</string>
    <string name="start_time">HH:MM</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="confirm_button">Confirm Booking</string>
    <string name="enter_cardholder_name">Enter card holder name:</string>
    <string name="Enter_name_on_card">Enter name on card</string>
    <string name="enter_card_number">Enter card number:</string>
    <string name="enter_card">Enter your card number</string>
    <string name="enter_ccv">Enter card CCV:</string>
    <string name="ccv_number">Enter your card CCV at the back</string>
    <string name="error_message">Error Message</string>
    <string name="enter_messing_info">Please enter the missing fields</string>
    <string name="renting_rate">(Rate of rent is 3 K.D per Hour)</string>
    <string name="enter_missing_feilds">Please enter your email and password to Sign-in</string>
    <string name="error_message_register">Please make sure all the feilds above are filled to register your account</string>
    <string name="confirm_dialog">Confirming Payment........</string>
    <string name="booking_made">View Bookings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Open navigation drawer</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="enter_time_of_booking"><![CDATA[Please enter Start time & End time of your booking]]></string>
    <string name="alert_title">Booking Cancellation</string>
    <string name="alert_message">Are you sure you want to cancel your booking?</string>
    <string name="postive_alert">Yes</string>
    <string name="negative_alert">No</string>
    <string name="holder_test">Your renting amount is:</string>
    <string name="example">" Kuwaiti Dinars"</string>
    <string name="reset_password_hint">Enter your registered Email to reset password</string>
    <string name="reset_account">Reset your account</string>


</resources>