<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/registerEmailID"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/email_icon"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/registerPasswordID"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_below="@+id/registerEmailID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16dp" />

    <Button
        android:id="@+id/loginButtonID"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPasswordID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_style"
        android:elevation="20dp"
        android:text="@string/login_button"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/registerButtonID"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButtonID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:elevation="20dp"
        android:text="@string/register_button"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/forgotTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButtonID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/errorTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerPasswordID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/enter_missing_feilds"
        android:textColor="#FF0000"
        android:visibility="invisible" />

</RelativeLayout>