<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceBooking"
    android:background="@drawable/booking_background">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintBottom_toTopOf="@+id/startTimeEditTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditTextID"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:layout_marginBottom="344dp"
        android:text="@string/select_time"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.298" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="44dp"
        android:text="@string/select_date"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDate"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/titleDate"
        android:layout_width="235dp"
        android:layout_height="33dp"
        android:text="@string/select_date_time_slot"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/dateEditTextID"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/titleDate"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/endTimeEditTextID"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/start_time"
        android:inputType="number"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toEndOf="@+id/startTimeEditTextID"
        app:layout_constraintTop_toBottomOf="@+id/dateEditTextID"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/startTimeEditTextID"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/start_time"
        android:inputType="number"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/dateEditTextID"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/startTimeEditTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditTextID"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/endTimeEditTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditTextID"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/confirmButtonID"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_style"
        android:text="@string/confirm_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeEditTextID"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="111dp"
        android:layout_height="41dp"
        android:text="@string/enter_cardholder_name"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.178" />

    <EditText
        android:id="@+id/cardOwnerID"
        android:layout_width="231dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/Enter_name_on_card"
        android:inputType="text"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textColorHighlight="#FFFCFC"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/startTimeEditTextID"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="113dp"
        android:layout_height="42dp"
        android:text="@string/enter_card_number"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/cardNumberID"
        android:layout_width="231dp"
        android:layout_height="41dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/enter_card"
        android:inputType="number"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#F8F8F8"
        android:textColorLink="#F6F3F3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/cardOwnerID"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="111dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:text="@string/enter_ccv"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cardCcvID"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/ccv_number"
        android:inputType="number"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberID"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/errorMessageTextID"
        android:layout_width="222dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/error_message"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/confirmButtonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardCcvID"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/amountToPayID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.488" />

    <TextView
        android:id="@+id/holderTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holder_test"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.488" />

</androidx.constraintlayout.widget.ConstraintLayout>