<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".CreateAccountActivity">

    <EditText
        android:id="@+id/registerEmailID"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/email_icon"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381" />

    <EditText
        android:id="@+id/registerPasswordID"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_below="@+id/registerEmailID"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/password_icon"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailID"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/createAccountBtnID"
        android:layout_width="309dp"
        android:layout_height="57dp"
        android:background="@drawable/edit_text_style"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterLastNameID"
        app:layout_constraintVertical_bias="0.426" />

    <EditText
        android:id="@+id/enterLastNameID"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/android_icon"
        android:ems="10"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterFirstNameID"
        app:layout_constraintVertical_bias="0.076" />

    <EditText
        android:id="@+id/enterFirstNameID"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/android_icon"
        android:ems="10"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordID"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/errorText2ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/error_message_register"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/createAccountBtnID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterLastNameID" />

</androidx.constraintlayout.widget.ConstraintLayout>